@@ -1,3 +1,8 @@
+   26 August 2013
+Changed format specifier %ld %lX etc to %lld %llx etc for Microsoft 64 bit platforms.
+(long long integer type). 
+Reason: d2x was bitterly giving the wrong result for arguments >= 2^32
+
     3 August 2013
 glf$(=(!.a.)):(=?h) didn't succeed because !(a.) erronously had READY flag set.
 
